# auth-service-python-fast-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  permissions.yaml.example  pyproject.toml
src/: config.py  constants.py  db.py  db_utils.py  main.py  migrations.py  models.py  schemas.py  utils.py
