[tool.poetry]
name = "fastapi-auth-service"
version = "0.1.0"
description = "Auth microservice using FastAPI that issues JWTs with roles and permissions"
authors = ["Igor Kovalev <likovalevl@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.120.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlmodel = "^0.0.27"
pydantic_settings = "^2.11.0"
psycopg2-binary = "^2.9.11"
bcrypt = "4.3.0"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
manage = "manage:main"


[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"